--- a/413_Final/index.css
+++ b/413_Final/index.css
@@ -1,5 +1,5 @@
 /*  pulled from Zybooks:https://learn.zybooks.com/zybook/ARIZONAECE413SalehiFall2024/chapter/2/section/7?content_resource_id=88127900  */
-/*  flex container */
+/*  team flex container */
 #container {
     display: flex;
     gap: 20px;
@@ -8,17 +8,68 @@
     flex-wrap: wrap;
  }
 
- .photo {
+ .team {
     padding: 10px;
     box-shadow: 3px 3px 3px lightgray;
     border: 1px solid lightgray;   
  }
  
- .photo img {
+ .team img {
     width: 50px;
     height:50px;
  }
  
  .photo p {
     text-align: center;
+ }
+
+ /*pulled from W3*/
+ /*Navbar*/
+
+ /* Add a black background color to the top navigation */
+.topnav {
+   background-color: #333;
+   overflow: hidden;
+ }
+ 
+ /* Style the links inside the navigation bar */
+ .topnav a {
+   float: left;
+   display: block;
+   color: #f2f2f2;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
+   font-size: 17px;
+ }
+ 
+ /* Change the color of links on hover */
+ .topnav a:hover {
+   background-color: #ddd;
+   color: black;
+ }
+ 
+ /* Add an active class to highlight the current page */
+ .topnav a.active {
+   background-color: #04AA6D;
+   color: white;
+ }
+ 
+ /* Hide the link that should open and close the topnav on small screens */
+ .topnav .icon {
+   display: none;
+ }
+
+ @media screen and (max-width: 600px) {
+   .topnav.responsive {position: relative;}
+   .topnav.responsive a.icon {
+     position: absolute;
+     right: 0;
+     top: 0;
+   }
+   .topnav.responsive a {
+     float: none;
+     display: block;
+     text-align: left;
+   }
  }
